[package]
name = "invikta"
version = "0.1.0"
authors = ["DeltaManiac <maxpaynered@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
imgui = "0.2.1"
imgui-gfx-renderer = "0.2.0"
imgui-winit-support = "0.2.1"
gfx = "0.18"
gfx_device_gl = "0.16"
gfx_window_glutin = "0.31.0"
#gfx_core = "0.8.2"
glutin = "0.21"